<resources>
    <string name="app_name">FromZero</string>
    <string name="version_by_ss">v%1$s, made by Spudg Studios</string>
    <string name="back">Back</string>
    <string name="about_fromzero">About FromZero</string>
    <string name="fromzero_logo">FromZero Logo</string>
    <string name="fromzero">FromZero</string>
    <string name="fromzero_desc">FromZero is a simple and easy to use application, allowing you to record monthly valuations for assets and liabilities as well as displaying the change in valuations over time. \n\nSpudg Studios is currently a one-man development studio and this is an early version of the application, so if you have any suggestions for new calculators that could be added or you\'ve found a bug, please send an email below!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="send_an_email">Send an email</string>
    <string name="add_valuations_for_2_or_more_months_to_see_a_chart">Add valuations for 2 or more months to see a chart.</string>
    <string name="assets">Assets</string>
    <string name="_0">0</string>
    <string name="liabilities">Liabilities</string>
    <string name="no_assets_or_liabilities_added_yet">No assets or liabilities added yet.</string>
    <string name="add_asset_liability">Add Asset / Liability</string>
    <string name="add_new_valuation">Add new valuation</string>
    <string name="no_valuations_added_yet">No valuations added yet.</string>
    <string name="asset">Asset</string>
    <string name="liability">Liability</string>
    <string name="ajbell_isa">AJBell ISA</string>
    <string name="primary_residence_purchased_2004_for_110k">Primary residence, purchased 2004 for £110k</string>
    <string name="add_a_new_asset">Add a new asset</string>
    <string name="valuation_date">Valuation date</string>
    <string name="_19_april_2021">19 April 2021</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_new_liability">Add a new liability</string>
    <string name="add_asset">Add asset</string>
    <string name="add_liability">Add liability</string>
    <string name="delete_asset_liability">Delete [asset/liability]</string>
    <string name="are_you_sure_you_want_to_delete_this_asset_liability">Are you sure you want to delete this [asset/liability]?</string>
    <string name="delete">Delete</string>
    <string name="delete_valuation">Delete valuation</string>
    <string name="are_you_sure_you_want_to_delete_this_valuation">Are you sure you want to delete this valuation?</string>
    <string name="copyright_2021_spudg_studios">Copyright © 2021 Spudg Studios</string>
    <string name="all_rights_reserved_text">All rights reserved. By using this application, you agree that the creator of this application is not responsible for any losses or damages.</string>
    <string name="philjay_mpandroidchart">PhilJay/MPAndroidChart</string>
    <string name="licensed_under_the_apache_license_2_0">Licensed under the Apache License 2.0</string>
    <string name="larswerkman_holocolorpicker">larswerkman/HoloColorPicker</string>
    <string name="google_material_design_icons">google/material-design-icons</string>
    <string name="steve_matteson_open_sans_light_font">Steve Matteson / Open Sans Light font</string>
    <string name="done">Done</string>
    <string name="update_asset_liability">Update [asset/liability]</string>
    <string name="update">Update</string>
    <string name="update_valuation">Update valuation</string>
    <string name="set_asset_value_date">Set asset value date</string>
    <string name="submit">Submit</string>
    <string name="month_year">%1$s %2$s</string>
    <string name="date">Date</string>
    <string name="delete_asset">Delete asset</string>
    <string name="delete_liability">Delete liability</string>
    <string name="delete_asset_warn">Are you sure you want to delete this asset?</string>
    <string name="delete_liability_warn">Are you sure you want to delete this liability?</string>
    <string name="update_asset">Update asset</string>
    <string name="update_liability">Update liability</string>
    <string name="colour">Colour</string>
    <string name="choose_a_colour">Choose a colour</string>
    <string name="colour_preview">Colour Preview</string>
    <string name="edit_button">Edit Button</string>
</resources>